name : fltkhs-reflex-host
version : 0.0.0.1
synopsis : Fltkhs template project
description:
    Starter kit for an FLTKHS project
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-reflex-host
category: UI,Graphics
cabal-version: >=1.20
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-reflex-host

custom-setup
  setup-depends:
    base >= 4.5 && < 4.11,
    Cabal < 1.25,
    filepath,
    directory

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable fltkhs-reflex-host
  Main-Is: reflex-host.hs
  Hs-Source-Dirs: src/
  Build-Depends: base == 4.*,
                 fltkhs >= 0.5.3.4,
                 text >= 1.2.2.0,
                 reflex >= 0.4.0,
                 mtl >= 2.2.1,
                 transformers >= 0.4.2,
                 dependent-sum >= 0.3.2,
                 ref-tf >= 0.4
  default-language: Haskell2010
  ghc-Options: -Wall
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options: -O2
  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
